chaves admins em endpoints
